IntelliJ/tests/invalid/syntax/writeparens.masl
/* invalid: print enclosed in parentheses */
Write ("Hello").